# Eric

./: CMakeLists.txt  README.md  c_array.h  exception.h  heap.cpp  heap.h  main.cpp  main.ere  op_code.h  operations.cpp  operations.h  virtual_machine.cpp  virtual_machine.h
generator/: generator.cpp  generator.h  instruction.cpp  instruction.h
vm/: debug.h  op_code.h  virtual_machine.cpp  virtual_machine.h
